--- a/EducationCenter/EducationCenter.csproj
+++ b/EducationCenter/EducationCenter.csproj
@@ -19,4 +19,4 @@
 	<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.0" />
   </ItemGroup>
 
-</Project>
+FileName</Project>
