--- a/EducationCenter/appsettings.json
+++ b/EducationCenter/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "Gemini": {
+    "ApiKey": "AIzaSyDNHRjjOnvhTZuwhc5hP5z8MjBzwBNK988",
+    "Model": "gemini-1.5-flash"
+  },
+
+  "ConnectionStrings": {
+    "OracleDb": "User Id=RM554516;Password=171005;Data Source=oracle.fiap.com.br:1521/orcl;"
+  },
+
   "AllowedHosts": "*"
 }
