--- a/EducationCenter.Tests/EducationCenter.Tests.csproj
+++ b/EducationCenter.Tests/EducationCenter.Tests.csproj
@@ -15,6 +15,7 @@
   <!-- Pacotes de teste -->
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
+    <PackageReference Include="Oracle.EntityFrameworkCore" Version="9.23.26000" />
     <PackageReference Include="xunit" Version="2.9.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.8.1">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
